Salvando o caminho do documento

--- a/app/src/main/res/menu/menu_contexto.xml
+++ b/app/src/main/res/menu/menu_contexto.xml
@@ -4,4 +4,5 @@
 
     <item android:title="Excluir" android:onClick="excluir"/>
     <item android:title="Atualizar" android:onClick="atualizar"/>
+    <item android:title="Visualizar" android:onClick="visualizar"/>
 </menu>
