--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,14 +27,15 @@
                 android:text="@string/app_version"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textStyle="italic|bold"
                 android:gravity="end" />
 
             <EditText
                 android:background="@drawable/edittext_style"
                 android:id="@+id/endClienteId"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="80dp"
+                android:layout_height="@dimen/tamanhoEditText"
+                android:layout_marginTop="60dp"
                 android:hint="Endereço"
                 android:inputType="textPersonName"
                 android:selectAllOnFocus="true"
@@ -45,7 +46,7 @@
                 android:background="@drawable/edittext_style"
                 android:id="@+id/nomeClienteId"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/tamanhoEditText"
                 android:layout_below="@+id/endClienteId"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="@dimen/distancia"
@@ -59,10 +60,9 @@
                 android:background="@drawable/edittext_style"
                 android:id="@+id/rgClienteId"
                 android:layout_width="@dimen/largura_Campo"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/tamanhoEditText"
                 android:selectAllOnFocus="true"
                 android:layout_marginTop="@dimen/distancia"
-                android:ems="10"
                 android:hint="Rg"
                 android:inputType="number"
                 android:textColor="@color/colorAccent"
@@ -73,7 +73,7 @@
                 android:background="@drawable/edittext_style"
                 android:id="@+id/cpfClienteId"
                 android:layout_width="@dimen/largura_Campo"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/tamanhoEditText"
                 android:selectAllOnFocus="true"
                 android:hint="Cpf"
                 android:inputType="number"
@@ -84,7 +84,7 @@
                 android:background="@drawable/edittext_style"
                 android:id="@+id/celularClienteId"
                 android:layout_width="@dimen/largura_Campo"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/tamanhoEditText"
                 android:selectAllOnFocus="true"
                 android:layout_marginTop="@dimen/distancia"
                 android:hint="Celular"
